<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Breaking Bad</string>
    <string name="screen_home_label">Actors</string>
    <string name="screen_actor_detail_label">Actor</string>
    <string name="screen_quotes_label">Quotes</string>
    <string name="screen_deaths_label">Breaking Bad Deaths</string>
    <string name="screen_episodes_label">Episodes</string>
    <string name="screen_player_label">Player</string>

    <string name="quotes">Quotes</string>
    <string name="deaths">Deaths</string>
    <string name="episodes">Episodes</string>
    <string name="player">Player</string>
    <string name="videos">Videos</string>
    <string name="map">Map</string>
    <string name="api">API</string>

    <string name="watch_deaths">Deaths</string>
    <string name="watch_funny">Funny moments</string>

    <!-- vh actor -->
    <string name="content_description_character_image">Actor Image</string>

    <!-- actor detail -->
    <string name="label_name">Name</string>
    <string name="label_nickname">Nickname</string>
    <string name="label_birthday">Birthday</string>
    <string name="label_status">Status</string>
    <string name="label_portrayed">Real name</string>
    <string name="label_occupation">Role</string>
    <string name="label_category">Category</string>
    <string name="missing_value">n/a</string>
    <string name="missing_img_url">[missing image url]</string>
    <string name="character_image">Image</string>
    <string name="cd_item_detail_image">Selected character</string>

    <!-- Episodes -->
    <string name="label_season">Season</string>
    <string name="label_air_date">Air date</string>
    <string name="label_series">Series</string>
    <string name="label_actors">Actors</string>

    <!-- Quotes -->
    <string name="label_quote_author">by</string>
    <string name="label_quote_in_series">in</string>

    <!-- Deaths -->
    <string name="label_death_victim">Victim</string>
    <string name="label_death_cause">Treatment</string>
    <string name="label_death_responsible">Responsible</string>

    <string name="breaking_bad">Breaking Bad</string>
    <string name="better_call_saul">Better Call Saul</string>

</resources>