<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vh_item_root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/vh_quote_padding_horizontal"
    android:paddingTop="@dimen/vh_quote_padding_vertical"
    android:paddingEnd="@dimen/vh_quote_padding_horizontal"
    android:paddingBottom="@dimen/vh_quote_padding_vertical">

    <TextView
        android:id="@+id/txt_title"
        style="@style/VhItemTitle"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Episode" />

    <TextView
        android:id="@+id/txt_season_label"
        style="@style/VhItemMeta"
        android:layout_marginTop="@dimen/vh_item_txt_meta_margin_top"
        android:text="@string/label_season"
        android:textColor="@color/light_green_six"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        tools:text="Season label" />

    <TextView
        android:id="@+id/txt_season"
        style="@style/VhItemMeta"
        android:layout_marginTop="@dimen/vh_item_txt_meta_margin_top"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/txt_season_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/txt_season_label"
        tools:text="Season" />

    <TextView
        android:id="@+id/txt_air_date_label"
        style="@style/VhItemMeta"
        android:layout_marginTop="@dimen/vh_item_txt_meta_margin_top"
        android:text="@string/label_air_date"
        android:textColor="@color/light_green_six"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_season_label"
        tools:text="Air date label" />

    <TextView
        android:id="@+id/txt_air_date"
        style="@style/VhItemMeta"
        android:layout_marginTop="@dimen/vh_item_txt_meta_margin_top"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/txt_air_date_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/txt_air_date_label"
        tools:text="Air date" />

    <TextView
        android:id="@+id/txt_actors"
        style="@style/VhEpisodeItemMeta"
        android:layout_marginTop="@dimen/vh_item_txt_meta_margin_top"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_air_date_label"
        tools:text="Actors" />

    <TextView
        android:id="@+id/txt_series_label"
        style="@style/VhItemMeta"
        android:layout_marginTop="@dimen/vh_item_txt_meta_margin_top"
        android:text="@string/label_series"
        android:textColor="@color/light_green_six"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_actors"
        tools:text="Series label" />

    <TextView
        android:id="@+id/txt_series"
        style="@style/VhItemMeta"
        android:layout_marginTop="@dimen/vh_item_txt_meta_margin_top"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/txt_series_label"
        app:layout_constraintTop_toBottomOf="@+id/txt_actors"
        tools:text="Series" />

</androidx.constraintlayout.widget.ConstraintLayout>
